adapt tests to recent JDK